syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

option go_package = "module github.com/ferza17/ecommerce-microservices-v2/user-service/model/rpc/pb";

message NotificationTemplate {
  string id = 1;
  string type = 2;
  string template = 3;
  google.protobuf.Struct templateVars = 4;
}

enum NotificationTypeEnum {
  NOTIFICATION_EMAIL_USER_LOGIN = 0;
  NOTIFICATION_EMAIL_USER_CREATED = 1;
}

message SendLoginEmailNotificationRequest {
  string username = 1;
  string email = 2;
  string accessToken = 3;
  string refreshToken = 4;
  NotificationTypeEnum notificationType = 5;
}

message SendLoginEmailNotificationResponse {
  string status = 1;
}

message SendUserVerificationEmailNotificationRequest {
  string verificationUrl = 1;
  NotificationTypeEnum notificationType = 2;
  string email = 3;
}